# admixture-cache

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SCIENCE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PUBLISH_CACHE.md  RELEASE.md
src/admixture_cache/: __init__.py  _core.py  _dispatch.py  _paths.py  _subprocess_runner.py  alignment.py  builder.py  cli.py  distribution.py  errors.py  gl.py  io.py  manifest.py  orchestration.py  projection.py  runner.py
tests/integration/: _generate_fixtures.py  test_e2e_build_and_project.py
tests/integration/fixtures/: clusters.yaml  panel.bed  panel.fam  panel.pop  target_AB_5050.bed  target_AB_5050.fam  target_pure_A.bed  target_pure_A.fam  target_pure_C.bed  target_pure_C.bim  target_pure_C.fam  target_three.bed  target_three.fam  truth.json
tests/unit/: test_alignment.py  test_builder.py  test_cli.py  test_distribution.py  test_gl.py  test_io.py  test_manifest.py  test_orchestration.py  test_packaging.py  test_projection.py
