[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admixture-cache"
version = "1.4.1"
description = "Precomputed-P supervised-ADMIXTURE projection cache: build slow once, project fast per target."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11.4,<3.15"
authors = [
    { name = "Carsten Erickson", email = "carstene@mailbox.org" },
]
keywords = [
    "bioinformatics",
    "genetics",
    "admixture",
    "ancestry",
    "population-genetics",
    "supervised-admixture",
    "projection-cache",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pydantic>=2.5,<3",
    # pandas is used by `extract_target_dosage_via_plink2` to parse
    # plink2 `--recode A` text output. Imported inline (not at module
    # load) so the import cost only hits the projection hot path,
    # but it IS required for the default project_target flow.
    "pandas>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    # pandas-stubs gives mypy proper types for the pandas calls in
    # alignment.py — without it strict mode reports `no-any-return`
    # on the DataFrame-to-ndarray conversion.
    "pandas-stubs>=2.0",
    # import-linter enforces the layered-module dependency convention
    # documented in DEVELOPMENT.md. Contracts live in this pyproject
    # under [tool.importlinter]; CI runs `lint-imports` as a gate.
    "import-linter>=2.0",
    # Hypothesis drives the property-based tests for the SLSQP solver
    # in tests/unit/test_projection.py.
    "hypothesis>=6.0",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
admixture-cache = "admixture_cache.cli:cli"

[project.urls]
Homepage = "https://github.com/carstenerickson/admixture-cache"
Issues = "https://github.com/carstenerickson/admixture-cache/issues"
Source = "https://github.com/carstenerickson/admixture-cache"
Changelog = "https://github.com/carstenerickson/admixture-cache/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]
include = ["admixture_cache*"]

[tool.setuptools.package-data]
admixture_cache = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# `-m "not integration"` keeps the default `pytest` invocation fast
# — the integration suite requires real ADMIXTURE 1.4 + plink2
# binaries and is gated to a dedicated CI job. Opt in via
# `pytest -m integration`.
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: end-to-end tests requiring real ADMIXTURE + plink2 binaries (Linux only)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
    "E501",     # line length handled by ruff format
    "RUF001",   # × and – in strings: intentional in scientific docstrings
    "RUF002",   # × and – in docstrings: intentional
    "RUF003",   # × and – in comments: intentional
    "RUF022",   # __all__ semantically grouped, not alphabetical
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/admixture_cache"]

[[tool.mypy.overrides]]
module = "scipy.optimize"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

# ─── import-linter: enforce the module layering documented in DEVELOPMENT.md ───
# Each layer can only import from layers above it (lower layer index =
# higher in the dependency graph). The dispatcher (_dispatch) sits
# alongside the other layer-0 utilities so every higher layer can
# route runner.run() calls through it.

[tool.importlinter]
root_package = "admixture_cache"

[[tool.importlinter.contracts]]
name = "Module layering"
type = "layers"
layers = [
    "admixture_cache.cli",
    "admixture_cache.orchestration | admixture_cache.builder | admixture_cache.distribution",
    "admixture_cache.io | admixture_cache._subprocess_runner",
    "admixture_cache.projection | admixture_cache.alignment | admixture_cache.manifest",
    "admixture_cache._dispatch | admixture_cache._paths",
    "admixture_cache.errors | admixture_cache.runner",
]
ignore_imports = [
    # __init__.py re-exports symbols from every submodule. Re-exports
    # land in declaration order at module-load time; treating
    # `admixture_cache -> admixture_cache.*` as exempt keeps the
    # public-API surface decoupled from layer ordering. (Pre-v1.1.1
    # also imported SubprocessToolRunner from cli.py at __init__ bottom,
    # which introduced a __init__ → cli → __init__ cycle; v1.1.1
    # moved the class to _subprocess_runner.py to break that cycle.)
    "admixture_cache -> admixture_cache.*",
]
